--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "raml-sanitize.js",
   "scripts": {
     "lint": "standard",
-    "test-cov": "istanbul cover node_modules/mocha/bin/_mocha -- -R spec --bail",
+    "test-cov": "nyc node_modules/mocha/bin/_mocha -- -R spec --bail",
     "test": "npm run lint; npm run test-cov"
   },
   "repository": {
@@ -28,6 +28,8 @@
     "chai": "^4.1.2",
     "istanbul": "^0.4.5",
     "mocha": "^6.1.4",
-    "standard": "^12.0.0"
-  }
+    "standard": "^12.0.0",
+    "nyc": "^14.1.0"
+  },
+  "dependencies": {}
 }
