--- a/package.json
+++ b/package.json
@@ -30,5 +30,7 @@
     "nyc": "^14.1.1",
     "standard": "^14.3.1"
   },
-  "dependencies": {}
+  "dependencies": {
+    "webapi-parser": "^0.3.2"
+  }
 }
