--- a/package.json
+++ b/package.json
@@ -28,9 +28,8 @@
     "chai": "^4.2.0",
     "mocha": "^6.2.2",
     "nyc": "^14.1.1",
-    "standard": "^14.3.1"
-  },
-  "dependencies": {
+    "standard": "^14.3.1",
     "webapi-parser": "^0.3.2"
-  }
+  },
+  "dependencies": {}
 }
