--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
   "homepage": "https://github.com/mulesoft/node-raml-sanitize",
   "devDependencies": {
     "chai": "^4.1.2",
-    "mocha": "^6.1.4",
-    "standard": "^12.0.0",
-    "nyc": "^14.1.0"
+    "mocha": "^7.1.2",
+    "nyc": "^15.0.1",
+    "standard": "^14.3.3"
   },
   "dependencies": {}
 }
